### ---
#  Id: INICIO-4
#  Name: Tela de Depósito
#  Description: Validar a abertura e componentes da tela de Depósito
### ---
appId: br.com.foxbit.foxbitandroid
---
- runFlow: "../../common/setup.yaml"
- runScript: "../../common/env.js"
- runScript: "../../pages/inicio.js"
- runScript: "../../pages/login.js"

# Clicar em Depositar
- tapOn:
    id: ${output.INICIO.botaoDepositar}
- waitForAnimationToEnd:
    timeout: 3000

# Validar título da tela ou aba
- assertVisible:
    text: ".*Depositar.*"

- assertVisible: "Buscar"

- assertVisible:
    text: ".*Real.*"

- assertVisible:
    text: ".*Bitcoin.*"

- assertVisible:
    text: ".*XRP.*"

- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/tc_inicio_004_depositar"

# Voltar para a home
- tapOn:
    id: ${output.LOGIN.botaoVoltar}
- waitForAnimationToEnd:
    timeout: 3000

# Validar retorno à Home
- assertVisible:
    id: ${output.INICIO.botaoDepositar}
