# COM O USUÁRIO LOGADO - EXECUTE -> maestro test -e SKIP_LAUNCH=true inicio.yaml
appId: br.com.foxbit.foxbitandroid
---
# Execução Sequencial de Testes de Início com Reset de Estado
- runScript: "../../pages/inicio.js"

# 1. Validar visibilidade e componentes da tela inicial
- runFlow: "tc_inicio_001.yaml"

# 2. Validar funcionamento e scroll lateral dos filtros de moedas
- runFlow: "tc_inicio_002.yaml"

# 3. Validar acesso ao Livro de Ofertas e retorno
- runFlow: "tc_inicio_003.yaml"

# 4. Validar fluxo de depósito (botão rápido)
- runFlow: "tc_inicio_004.yaml"

# Reset: Volta para o Início
- tapOn:
    id: ${output.INICIO.botaoInicio}
- waitForAnimationToEnd:
    timeout: 2000

# 5. Validar fluxo de saque (botão rápido)
- runFlow: "tc_inicio_005.yaml"

# Reset: Volta para o Início
- tapOn:
    id: ${output.INICIO.botaoInicio}
- waitForAnimationToEnd:
    timeout: 2000

# 6. Validar navegação para atalhos adicionais (Earn, Card, etc)
- runFlow: "tc_inicio_006.yaml"

# Reset: Volta para o Início
- tapOn:
    id: ${output.INICIO.botaoInicio}
- waitForAnimationToEnd:
    timeout: 2000

# 7. Validar scroll e acesso ao card de recomendação
- runFlow: "tc_inicio_007.yaml"

